package jp.pgw.lab78.androrm.database.interfaces.orm.entity.query

/**
 * ## Insert 文生成限定 マーカーインターフェース
 */
interface InsertEntity : Entity {}