@startuml
title app SQLビルダー詳細クラス図
skinparam shadowing false
skinparam roundcorner 8
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam componentStyle rectangle
skinparam defaultTextAlignment left
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #9E9E9E
skinparam ArrowColor #455A64
skinparam activityDiamondBackgroundColor #ECEFF1
skinparam activityDiamondBorderColor #455A64

interface "QueryBuilderLike<T>" as QueryBuilderLike {
  +build(): String
}
abstract class QueryWithBindValues {
  +query: String
  +bindValues: List<Any?>
  #additionalBindValues(): List<Any?>
  ~addBindValue(value)
  ~addBindValues(values)
  #clearBindValues()
}

class "Create<T>" as Create {
  +build(): String
  +buildIndexQueries(version, usedNames): List<String>
}
class "Select<T>" as Select {
  +join(...)
  +where(...)
  +order(...)
  +limit(...)
  +offset(...)
  +build(): String
}
class "Insert<T>" as Insert {
  +addEntity(entity)
  +addEntities(entities)
  +build(): String
}
class "Update<T>" as Update {
  -isAllRecords: Boolean
  -isBuild: Boolean
  +set(entity)
  +set(block)
  +from(...)
  +join(...)
  +where(...)
  +updateAll()
  +build(): String
}
class "Delete<T>" as Delete {
  -isAllRecords: Boolean
  -isBuild: Boolean
  +where(...)
  +deleteAll()
  +build(): String
}
class "Upsert<T>" as Upsert {
  +addEntity(entity)
  +onConflict(...)
  +set(...)
  +where(...)
  +build(): String
}
class "Absert<T>" as Absert {
  +addEntity(entity)
  +onConflict(...)
  +build(): String
}

abstract class "BaseSelect<T,R>" as BaseSelect
class "LimitClause<T>" as LimitClause

QueryBuilderLike <|.. Create
QueryBuilderLike <|.. Select
QueryBuilderLike <|.. Insert
QueryBuilderLike <|.. Update
QueryBuilderLike <|.. Delete
QueryBuilderLike <|.. Upsert
QueryBuilderLike <|.. Absert

QueryWithBindValues <|-- BaseSelect
BaseSelect <|-- Select
QueryWithBindValues <|-- Insert
QueryWithBindValues <|-- Update
QueryWithBindValues <|-- Delete
QueryWithBindValues <|-- Upsert
QueryWithBindValues <|-- Absert

Select --> LimitClause : limit()
LimitClause --> Select : delegates build/bindValues

class WhereClauseDelegate
class JoinClauseDelegate
class SetClauseBuilder
class UpsertSetClauseBuilder
class OnConflictClauseDelegate
class OrderDsl

BaseSelect *-- WhereClauseDelegate
BaseSelect *-- JoinClauseDelegate
BaseSelect ..> OrderDsl
Update *-- WhereClauseDelegate
Update *-- JoinClauseDelegate
Update ..> SetClauseBuilder
Delete *-- WhereClauseDelegate
Upsert *-- WhereClauseDelegate
Upsert *-- OnConflictClauseDelegate
Upsert ..> UpsertSetClauseBuilder
Absert *-- OnConflictClauseDelegate

note right of Update
WHEREなしはupdateAll()の
明示指定が必要。
where()とupdateAll()は
後から呼んだ方が有効。
end note

note right of Delete
WHEREなしはdeleteAll()の
明示指定が必要。
end note

@enduml
